# c2baRender

./: CMakeLists.txt  README.md
apps/hello-scene/: GLProgram.hpp  GLShader.hpp  ViewController.cpp  ViewController.hpp  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.hpp  main.cpp
apps/hello-scene/shaders/: draw_quad.fs.glsl  draw_quad.vs.glsl  forward.fs.glsl
cmake/: c2ba-source-group.cmake
libs/c2ba/include/c2ba/: maths.hpp  threads.hpp  utils.hpp
libs/c2ba/include/c2ba/maths/: types.hpp
libs/c2ba/include/c2ba/rendering/: TileRenderer.hpp  TiledFramebuffer.hpp
libs/c2ba/include/c2ba/rendering/integrators/: AOIntegrator.hpp  GeometryIntegrator.hpp  Integrator.hpp
libs/c2ba/include/c2ba/scene/: Scene.hpp
libs/c2ba/src/: maths.cpp  threads.cpp
libs/c2ba/src/rendering/integrators/: AOIntegrator.cpp  GeometryIntegrator.cpp
libs/c2ba/src/scene/: Scene.cpp
